<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color_primary"
    tools:context="io.aloketewary.bloodconnect.page.userAction.activity.AccountActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/account_setting_image"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/default_avatar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/account_setting_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/display_name"
        android:textColor="@color/whiteText"
        android:textSize="25sp"
        android:id="@+id/account_display_name_text"
        android:gravity="center_horizontal"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/account_status_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/account_display_name_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/hi_there_i_am_using_bloodconnect"
        android:textAlignment="center"
        android:textColor="@color/whiteText"
        android:textSize="16sp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/account_status_button"
        android:layout_centerHorizontal="true"
        android:text="@string/change_image"
        android:backgroundTint="@color/whiteText"
        android:textColor="@color/colorPrimary"
        android:padding="15dp"
        android:id="@+id/account_image_button" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="42dp"
        android:text="@string/change_status"
        android:id="@+id/account_status_button"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@color/whiteText"
        android:padding="15dp"/>
</RelativeLayout>
