<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.aloketewary.bloodconnect.page.userAction.activity.StatusActivity">

    <include layout="@layout/app_bar_layout"
        android:id="@+id/status_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">
        <TextView
            android:id="@+id/status_update_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/update_your_status"
            android:textSize="20sp"
            android:textStyle="bold" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/status_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/status_update_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        app:hintTextAppearance="@style/HintText">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_status" />
    </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/status_save_button"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@color/whiteText"
            android:layout_width="wrap_content"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            android:textSize="16sp"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:text="@string/save_changes" />
    </LinearLayout>


</RelativeLayout>